# opengl-learning

./: .gitignore  CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: main.cpp
src/engine/: camera.hpp  engine.cpp  engine.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/menu/: menu.cpp  menu.hpp
src/utils/: utils.hpp
src/window/: window.hpp
